--- a/filebeat/filebeat.reference.yml
+++ b/filebeat/filebeat.reference.yml
@@ -279,26 +279,26 @@ filebeat.modules:
     #var.paths:
 
 #-------------------------------- Nginx Module --------------------------------
-#- module: nginx
+- module: nginx
   # Access logs
-  #access:
-    #enabled: true
+  access:
+    enabled: true
 
     # Set custom paths for the log files. If left empty,
     # Filebeat will choose the paths depending on your OS.
-    #var.paths:
+    var.paths: ["/usr/local/nginx/logs/access.log"]
 
     # Input configuration (advanced). Any input configuration option
     # can be added under this section.
     #input:
 
   # Error logs
-  #error:
-    #enabled: true
+  error:
+    enabled: true
 
     # Set custom paths for the log files. If left empty,
     # Filebeat will choose the paths depending on your OS.
-    #var.paths:
+    var.paths: ["/usr/local/nginx/logs/error.log"]
 
     # Input configuration (advanced). Any input configuration option
     # can be added under this section.
