--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -18,16 +18,6 @@ filebeat.inputs:
 # you can use different inputs for various configurations.
 # Below are the input specific configurations.
 
-- type: log
-
-  # Change to true to enable this input configuration.
-  enabled: false
-
-  # Paths that should be crawled and fetched. Glob based paths.
-  paths:
-    - /var/log/*.log
-    #- c:\programdata\elasticsearch\logs\*
-
   # Exclude lines. A list of regular expressions to match. It drops the lines that are
   # matching any regular expression from the list.
   #exclude_lines: ['^DBG']
@@ -61,7 +51,13 @@ filebeat.inputs:
   # that was (not) matched before or after or as long as a pattern is not matched based on negate.
   # Note: After is the equivalent to previous and before is the equivalent to to next in Logstash
   #multiline.match: after
-
+- type: log
+  enabled: true
+  tail_files: true
+  paths:
+      - /Users/dongchen/work/src/git.dev.enbrands.com/yangdongchen/stocksvr/log/stock-api.log.2019*
+  tags: ["api"]
+  idle_timeout: 2
 
 #============================= Filebeat modules ===============================
 
@@ -120,7 +116,7 @@ setup.kibana:
   # Scheme and port can be left out and will be set to the default (http and 5601)
   # In case you specify and additional path, the scheme is required: http://localhost:5601/path
   # IPv6 addresses should always be defined as: https://[2001:db8::1]:5601
-  #host: "localhost:5601"
+  host: "localhost:5601"
 
   # Kibana Space ID
   # ID of the Kibana Space into which the dashboards should be loaded. By default,
@@ -145,15 +141,16 @@ setup.kibana:
 # Configure what output to use when sending the data collected by the beat.
 
 #-------------------------- Elasticsearch output ------------------------------
+setup.template.name: "web"
+setup.template.pattern: "web-*"
 output.elasticsearch:
-  # Array of hosts to connect to.
-  hosts: ["localhost:9200"]
+   hosts: ["localhost:9200"]
+   index: "web-%{+yyyy.MM.dd}"
 
   # Optional protocol and basic auth credentials.
   #protocol: "https"
   #username: "elastic"
   #password: "changeme"
-
 #----------------------------- Logstash output --------------------------------
 #output.logstash:
   # The Logstash hosts
@@ -178,6 +175,7 @@ processors:
   - add_cloud_metadata: ~
   - add_docker_metadata: ~
   - add_kubernetes_metadata: ~
+  - selfformat: ~
 
 #================================ Logging =====================================
 
